<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>reddeer.example.group</groupId>
	<artifactId>reddeer.example</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>reddeer.example :: test</name>
	<description>reddeer.example test plugin</description>
	<packaging>eclipse-test-plugin</packaging>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<properties>
		<java.version>1.8</java.version>
		<maven.version>3.0</maven.version>
		<tycho.version>0.22.0</tycho.version>
		<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
		<surefire.timeout>1200</surefire.timeout>
		<platformSystemProperties></platformSystemProperties>
	</properties>

	<repositories>
		<repository>
			<id>neon</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/neon</url>
		</repository>
		<repository>
			<id>RedDeer</id>
			<layout>p2</layout>
			<url>http://download.jboss.org/jbosstools/neon/snapshots/builds/reddeer_master/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>sonatype-public</id>
			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
		</pluginRepository>
	</pluginRepositories>


	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<ignoreTychoRepositories>true</ignoreTychoRepositories>
					<dependency-resolution>
						<extraRequirements>
							<requirement>
								<type>p2-installable-unit</type>
								<id>org.eclipse.jdt.feature.group</id>
								<versionRange>0.0.0</versionRange>
							</requirement>
						</extraRequirements>
					</dependency-resolution>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<format>yyyyMMdd-HHmm</format>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<useUIHarness>true</useUIHarness>
						<useUIThread>false</useUIThread>
						<testSuite>reddeer.example</testSuite>
						<testClass>reddeer.example.BasicTest</testClass>
						<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
						<argLine>${tycho.test.jvmArgs} ${platformSystemProperties}</argLine>
						<includes>
							<include>**/*Test.class</include>
						</includes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=388084 -->
			<id>osx</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
				<platformSystemProperties> -XstartOnFirstThread </platformSystemProperties>
			</properties>
		</profile>
	</profiles>
</project>
